updated package.json to include NPM version of connect2mongo

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "Adonis K.",
   "license": "MIT",
   "dependencies": {
+    "connect2mongo": "0.0.1",
     "gnu-argv": "^0.5.0",
-    "connect2mongo": "git+https://git@github.com/varemenos/connect2mongo.git",
     "underscore": "^1.7.0"
   }
 }
